@@ -24,6 +24,7 @@ var Connection = exports.Connection = function(id, socketOptions) {
   // Connection parsing state
   //
   this.maxBsonSize = socketOptions.maxBsonSize ? socketOptions.maxBsonSize : Connection.DEFAULT_MAX_BSON_SIZE;
+  this.maxMessageSizeBytes = socketOptions.maxMessageSizeBytes ? socketOptions.maxMessageSizeBytes : Connection.DEFAULT_MAX_MESSAGE_SIZE;
   // Contains the current message bytes
   this.buffer = null;
   // Contains the current message size
@@ -42,6 +43,8 @@ var Connection = exports.Connection = function(id, socketOptions) {
 
 // Set max bson size
 Connection.DEFAULT_MAX_BSON_SIZE = 1024 * 1024 * 4;
+// Set default to max bson to avoid overflow or bad guesses
+Connection.DEFAULT_MAX_MESSAGE_SIZE = Connection.DEFAULT_MAX_BSON_SIZE;
 
 // Inherit event emitter so we can emit stuff wohoo
 inherits(Connection, EventEmitter);
@@ -183,8 +186,14 @@ Connection.prototype.write = function(command, callback) {
     if(Array.isArray(command)) {
       for(var i = 0; i < command.length; i++) {
         var binaryCommand = command[i].toBinary()
+        
         if(!this.socketOptions['disableDriverBSONSizeCheck'] && binaryCommand.length > this.maxBsonSize) 
-          return callback(new Error("Document exceeds maximal allowed bson size of " + this.maxBsonSize + " bytes"));
+          return callback(new Error("Document exceeds maximum allowed bson size of " + this.maxBsonSize + " bytes"));
+        
+        if(this.socketOptions['disableDriverBSONSizeCheck'] && binaryCommand.length > this.maxMessageSizeBytes) {
+          return callback(new Error("Command exceeds maximum message size of " + this.maxMessageSizeBytes + " bytes"));
+        }
+
         if(this.logger != null && this.logger.doDebug) 
           this.logger.debug("writing command to mongodb", {binary: binaryCommand, json: command[i]});
         
@@ -192,8 +201,13 @@ Connection.prototype.write = function(command, callback) {
       }
     } else {
       var binaryCommand = command.toBinary()
+
       if(!this.socketOptions['disableDriverBSONSizeCheck'] && binaryCommand.length > this.maxBsonSize) 
-        return callback(new Error("Document exceeds maximal allowed bson size of " + this.maxBsonSize + " bytes"));
+        return callback(new Error("Document exceeds maximum allowed bson size of " + this.maxBsonSize + " bytes"));
+
+      if(this.socketOptions['disableDriverBSONSizeCheck'] && binaryCommand.length > this.maxMessageSizeBytes) {
+        return callback(new Error("Command exceeds maximum message size of " + this.maxMessageSizeBytes + " bytes"));
+      }
       
       if(this.logger != null && this.logger.doDebug) 
         this.logger.debug("writing command to mongodb", {binary: binaryCommand, json: command});
