@@ -81,6 +81,16 @@ ConnectionPool.prototype.setMaxBsonSize = function(maxBsonSize) {
   }
 }
 
+ConnectionPool.prototype.setMaxMessageSizeBytes = function(maxMessageSizeBytes) {
+  if(maxMessageSizeBytes == null){
+    maxMessageSizeBytes = Connection.DEFAULT_MAX_MESSAGE_SIZE;
+  }
+
+  for(var i = 0; i < this.openConnections.length; i++) {
+    this.openConnections[i].maxMessageSizeBytes = maxMessageSizeBytes;
+  }
+}
+
 // Start a function
 var _connect = function(_self) {
   // return new function() {
